--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.7
+django-cors-headers==3.7.0
+django-rest-allauth==1.1
+django-rest-framework==0.1.0
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.6.0
 httpie==2.4.0
 idna==2.10
 Pygments==2.8.1
+PyJWT==2.0.1
 PySocks==1.7.1
 pytz==2021.1
 requests==2.25.1
